--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "aplusthree/phpiggy",
+    "name": "aplusthree/piggy",
     "description": "A PHP application for tracking expenses.",
     "type": "project",
     "authors": [
